<resources>
    <string name="appName">Astroturf</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="rematch">Rematch</string>
    <string name="teamAWins">Team A Wins!</string>
    <string name="teamBWins">Team B Wins!</string>
    <string name="draw">Draw!</string>
    <string name="changeGoalKeeper">Change Goal Keeper!</string>
    <string name="stopConfirm">Do you want to stop?</string>
    <string name="increment" translatable="false">+</string>
    <string name="decrement" translatable="false">-</string>
    <string name="placeholder0" translatable="false">0</string>
    <string name="placeholderA" translatable="false">A</string>
    <string name="placeholderB" translatable="false">B</string>
</resources>
