<?xml version="1.0" encoding="utf-8"?>

<androidx.wear.widget.BoxInsetLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/dark_grey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:deviceIds="wear"
        android:padding="@dimen/box_inset_layout_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <View android:id="@+id/separator"
              android:layout_width="@dimen/separatorWidth"
              android:layout_height="0dp"
              android:background="@null"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent" />

        <Button
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/startStopHeight"
                android:textSize="@dimen/startStopTextSize"
                android:id="@+id/btnStartStop"
                android:layout_marginTop="@dimen/startStopMarginTop"
                android:background="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/statusHeight"
                android:id="@+id/tvStatus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="@dimen/statusMarginBottom"
                android:textSize="@dimen/statusTextSize"/>

        <LinearLayout android:id="@+id/scoreboardA"
                      android:layout_width="wrap_content"
                      android:layout_height="0dp"
                      android:orientation="vertical"
                      android:gravity="center"
                      app:layout_constraintTop_toBottomOf="@+id/btnStartStop"
                      app:layout_constraintBottom_toTopOf="@id/tvStatus"
                      app:layout_constraintRight_toLeftOf="@id/separator">

            <TextView android:layout_width="@dimen/incrementDecrementWidth"
                      android:layout_height="@dimen/incrementDecrementHeight"
                      android:text="@string/increment"
                      android:textAlignment="center"
                      android:gravity="center"
                      android:textSize="@dimen/incrementDecrementTextSize"
                      android:layout_gravity="center"/>

            <TextView
                    android:id="@+id/tvScoreA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/scoreTextSize"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:text="@string/placeholder0"/>

            <TextView android:layout_width="@dimen/incrementDecrementWidth"
                      android:layout_height="@dimen/incrementDecrementHeight"
                      android:text="@string/decrement"
                      android:textAlignment="center"
                      android:gravity="center"
                      android:textSize="@dimen/incrementDecrementTextSize"
                      android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="0dp"
                      android:orientation="vertical"
                      app:layout_constraintTop_toTopOf="@id/scoreboardA"
                      app:layout_constraintBottom_toBottomOf="@id/scoreboardA"
                      app:layout_constraintLeft_toLeftOf="@id/scoreboardA"
                      app:layout_constraintRight_toRightOf="@id/scoreboardA">

            <Button android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/btnIncrementA"
                    android:background="@null" />

            <Button android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/btnDecrementA"
                    android:background="@null" />

        </LinearLayout>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="0dp"
                  android:gravity="center"
                  android:text="@string/placeholderA"
                  android:textSize="@dimen/teamTextSize"
                  android:layout_marginStart="@dimen/teamMarginStart"
                  app:layout_constraintTop_toTopOf="@id/scoreboardA"
                  app:layout_constraintBottom_toBottomOf="@id/scoreboardA"
                  app:layout_constraintLeft_toLeftOf="parent"/>

        <LinearLayout android:id="@+id/scoreboardB"
                      android:layout_width="wrap_content"
                      android:layout_height="0dp"
                      android:orientation="vertical"
                      android:gravity="center"
                      app:layout_constraintTop_toBottomOf="@+id/btnStartStop"
                      app:layout_constraintBottom_toTopOf="@id/tvStatus"
                      app:layout_constraintLeft_toRightOf="@id/separator">

            <TextView android:layout_width="@dimen/incrementDecrementWidth"
                      android:layout_height="@dimen/incrementDecrementHeight"
                      android:text="@string/increment"
                      android:textAlignment="center"
                      android:gravity="center"
                      android:textSize="@dimen/incrementDecrementTextSize"
                      android:layout_gravity="center"/>

            <TextView
                    android:id="@+id/tvScoreB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/scoreTextSize"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:text="@string/placeholder0"/>

            <TextView android:layout_width="@dimen/incrementDecrementWidth"
                      android:layout_height="@dimen/incrementDecrementHeight"
                      android:text="@string/decrement"
                      android:textAlignment="center"
                      android:gravity="center"
                      android:textSize="@dimen/incrementDecrementTextSize"
                      android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="0dp"
                      android:orientation="vertical"
                      app:layout_constraintTop_toTopOf="@id/scoreboardB"
                      app:layout_constraintBottom_toBottomOf="@id/scoreboardB"
                      app:layout_constraintLeft_toLeftOf="@id/scoreboardB"
                      app:layout_constraintRight_toRightOf="@id/scoreboardB">

            <Button android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/btnIncrementB"
                    android:background="@null" />

            <Button android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/btnDecrementB"
                    android:background="@null" />

        </LinearLayout>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="0dp"
                  android:gravity="center"
                  android:text="@string/placeholderB"
                  android:textSize="@dimen/teamTextSize"
                  android:layout_marginEnd="@dimen/teamMarginEnd"
                  app:layout_constraintTop_toTopOf="@id/scoreboardB"
                  app:layout_constraintBottom_toBottomOf="@id/scoreboardB"
                  app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.wear.widget.BoxInsetLayout>